# invalid-tangram

./: README.md  pyproject.toml
src/invalid_tangram/: __init__.py  __main__.py
tests/: test_init.py
